src/styles/home.css
.Card-text{
    margin: 0 100% 1% 0;
    padding-left: 7%;  
    white-space: nowrap;
}

.Card-title{
    margin: 4% 100% 4% 0;
    padding-left: 7%;
    white-space: nowrap;
}


.btn .btn-outline-primary{
    margin: 5% 100% 5% 6%;
    white-space: nowrap;
    padding: 3% 4%;
}

.btn .btn-outline-warning{
    margin: 5% 6% 5% 100%;
}

/* button{
    margin: 5% 100% 5% 6%;
    white-space: nowrap;
    padding: 3% 4%;
} */

.btDiv{
    display: flex;
}
.h2Title{
    margin: 1% 100% 4% 0;
    color: rgb(221, 98, 60);
}

.characters{
    display: flex;
}

.fullCard{
    margin-right:3.5%;
    border: groove 1.8px rgba(0, 0, 0, 0.4);
}

.singleText{
    text-align: center;
}

.navbarImage{
    width: 14%;
    height: 87%;
    padding-left: 3%;
}

.horizontalScroll{
    overflow: auto;
    white-space: nowrap;
    text-align: center;
    justify-content: space-around;
}

